define custom css to handle overlap bug

--- a/gavel/static/css/utils.scss
+++ b/gavel/static/css/utils.scss
@@ -5,3 +5,13 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+
+.pb-safe {
+  padding-bottom: constant(safe-area-inset-bottom); /* iOS 11.0–11.2 */
+  padding-bottom: env(safe-area-inset-bottom);      /* iOS 11.2+ */
+}
+
+.mb-safe {
+  margin-bottom: constant(safe-area-inset-bottom);
+  margin-bottom: env(safe-area-inset-bottom);
+}
